<resources>
    <string name="app_name">KetgoMVVM</string>

    <!-- Layout  -->
    <string name="give_it_away_for_free">Give it away for free</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="list">List</string>
    <string name="sold">Sold</string>
    <string name="set_location">Set Location</string>
    <string name="your_location">Your Location</string>
    <string name="empty_string" />
    <string name="new_product">New</string>
    <string name="mark_as_sold">Mark as Sold</string>
    <string name="create_product">Create Product</string>
    <string name="a_new">New</string>
    <string name="like_new">Like new</string>
    <string name="good">Good</string>
    <string name="fair">Fair</string>
    <string name="poor">Poor</string>
    <string name="create">Create</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="edit_product">Edit Product</string>
    <string name="save">save</string>
    <string name="delete">Delete</string>
    <string name="selling">Selling</string>
    <string name="tl">₺</string>
    <string name="select_location">Select Location</string>


    <!-- Condition checkbox texts -->
    <string name="condition_fair">Fair</string>
    <string name="condition_good">Good</string>
    <string name="condition_like_a_new">Like a New</string>
    <string name="condition_new">New</string>
    <string name="condition_poor">Poor</string>

    <!-- Toast texts -->
    <string name="click_for_select_selling_location">Click for select selling location</string>
    <string name="click_for_change_selling_location">Click for change selling location</string>
    <string name="error_add_data_to_db">Error to Add Product DB</string>
    <string name="product_created">Product Created</string>
    <string name="product_update">Product Updated</string>
    <string name="product_delete">Product Deleted</string>
    <string name="warning">Warning</string>


</resources>