<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.ProductDetailFragment">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ivUpdateProduct"
        android:layout_width="500dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivUpdateProductButton"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvDetailPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/empty_string"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivUpdateProduct" />

    <TextView
        android:id="@+id/tvDetailProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/empty_string"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvDetailPrice"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailPrice" />

    <ImageView
        android:id="@+id/ivUpdateProductButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@+id/ivClose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivClose"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ivCreatedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_time"
        app:layout_constraintStart_toStartOf="@+id/tvDetailProduct"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailProduct"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ivUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:src="@drawable/ic_up"
        app:layout_constraintStart_toEndOf="@+id/ivCreatedDate"
        app:layout_constraintTop_toTopOf="@+id/ivCreatedDate"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvDetailsUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/ivUp"
        app:layout_constraintStart_toEndOf="@+id/ivUp"
        app:layout_constraintTop_toTopOf="@+id/ivUp" />

    <TextView
        android:id="@+id/tvDetailDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCreatedDate" />

    <TextView
        android:id="@+id/tvDetailCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text=""
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/ivUp"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/tvDetailLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/tvDetailCondition"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailCondition" />

    <Button
        android:id="@+id/btnSold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/mark_as_sold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailLocation" />

    <TextView
        android:id="@+id/tvCreatedDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/ivCreatedDate"
        app:layout_constraintStart_toEndOf="@+id/ivCreatedDate"
        app:layout_constraintTop_toTopOf="@+id/ivCreatedDate" />

    <View
        android:id="@+id/divider"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>